--- a/app/src/main/res/layout/activity_main_fargment.xml
+++ b/app/src/main/res/layout/activity_main_fargment.xml
@@ -130,7 +130,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/doid_abic_kufi_bold"
-        android:text="في انتظار وصول القراءة ..."
+        android:text="في انتظار الاتصال بالجهاز..."
         android:textColor="#333399"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
