--- a/app/src/main/res/layout/activity_reports_fragment.xml
+++ b/app/src/main/res/layout/activity_reports_fragment.xml
@@ -7,7 +7,7 @@
     android:background="@drawable/main_bg2">
 
     <ImageView
-        android:id="@+id/imageView19"
+        android:id="@+id/share_btn"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_marginEnd="300dp"
@@ -33,7 +33,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.04"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView19"
+        app:layout_constraintTop_toBottomOf="@+id/share_btn"
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
