--- a/app/src/main/res/layout/add_doctors_fragment.xml
+++ b/app/src/main/res/layout/add_doctors_fragment.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/main_bg2">
+    android:background="@drawable/main_bg2"
+    android:layoutDirection="ltr">
 
     <TextView
         android:id="@+id/textView"
@@ -41,10 +42,10 @@
         android:background="@drawable/custom_continar_shape"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.491"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.575">
+        app:layout_constraintVertical_bias="0.576">
 
         <TextView
             android:id="@+id/textView2"
@@ -230,4 +231,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
