--- a/app/src/main/res/layout/add_sport_fragment.xml
+++ b/app/src/main/res/layout/add_sport_fragment.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/main_bg2">
+    android:background="@drawable/main_bg2"
+    android:layoutDirection="ltr">
 
     <TextView
         android:id="@+id/textView"
