--- a/app/src/main/res/layout/instractions_second.xml
+++ b/app/src/main/res/layout/instractions_second.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/instractions_bg2">
+    android:background="@drawable/instractions_bg2"
+    android:layoutDirection="ltr">
 
     <TextView
         android:id="@+id/textView4"
@@ -52,10 +53,10 @@
     <TextView
         android:id="@+id/textView7"
         android:layout_width="360dp"
-        android:layout_height="200dp"
+        android:layout_height="wrap_content"
         android:fontFamily="@font/droid_arabic_kufi"
         android:gravity="center"
-        android:text="سوف تلاحظ العلامة الحمراء في اعلى يسار الشاشة تحولت الى اللون الأصفر فهذا يدل على ان الجهاز والتطبيق متصلين بشكل صحيح وفي انتظار وصول الاقرائة من الجهاز ."
+        android:text="سوف تلاحظ العلامة الحمراء في اعلى يسار الشاشة تحولت الى اللون الأصفر فهذا يدل على ان الجهاز والتطبيق متصلين بشكل صحيح وفي انتظار وصول القرائة من الجهاز ."
         android:textColor="#d6d1ff"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -64,7 +65,7 @@
         app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView6"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.050000012" />
 
     <ImageView
         android:id="@+id/next_but_second"
