--- a/app/src/main/res/layout/instractions_thierd.xml
+++ b/app/src/main/res/layout/instractions_thierd.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/instractions_bg3">
+    android:background="@drawable/instractions_bg3"
+    android:layoutDirection="ltr">
 
     <TextView
         android:id="@+id/textView4"
@@ -65,7 +66,7 @@
         app:layout_constraintHorizontal_bias="0.476"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView6"
-        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintVertical_bias="0.050000012"
         tools:ignore="RtlCompat" />
 
     <Button
