--- a/app/src/main/res/layout/instractions_first.xml
+++ b/app/src/main/res/layout/instractions_first.xml
@@ -22,7 +22,7 @@
         app:layout_constraintVertical_bias="0.12" />
 
     <ImageView
-        android:id="@+id/imageView9"
+        android:id="@+id/more_drug_btn"
         android:layout_width="wrap_content"
         android:layout_height="320dp"
         app:layout_constraintBottom_toBottomOf="parent"
