--- a/app/src/main/res/layout/more_fragment.xml
+++ b/app/src/main/res/layout/more_fragment.xml
@@ -286,7 +286,7 @@
             app:layout_constraintVertical_bias="0.083" />
 
         <TextView
-            android:id="@+id/imageView9"
+            android:id="@+id/more_drug_btn"
             android:layout_width="75dp"
             android:layout_height="50dp"
             android:background="@drawable/custom_add_bg"
@@ -317,7 +317,7 @@
             app:layout_constraintVertical_bias="0.7">
 
             <ImageView
-                android:id="@+id/add_drags_btn5"
+                android:id="@+id/add_drags_btn"
                 android:layout_width="55dp"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
