--- a/app/src/main/res/layout/more_fragment.xml
+++ b/app/src/main/res/layout/more_fragment.xml
@@ -34,7 +34,7 @@
             app:layout_constraintVertical_bias="0.083" />
 
         <TextView
-            android:id="@+id/imageView7"
+            android:id="@+id/more_doctor_btn"
             android:layout_width="75dp"
             android:layout_height="50dp"
             android:background="@drawable/custom_add_bg"
@@ -65,7 +65,7 @@
             app:layout_constraintVertical_bias="0.7">
 
             <ImageView
-                android:id="@+id/add_drags_btn2"
+                android:id="@+id/add_doctor_btn"
                 android:layout_width="55dp"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
