--- a/app/src/main/res/layout/add_drags_fragment.xml
+++ b/app/src/main/res/layout/add_drags_fragment.xml
@@ -135,7 +135,7 @@
             app:layout_constraintVertical_bias="0.564" />
 
         <EditText
-            android:id="@+id/time_doctor_input"
+            android:id="@+id/strength"
             android:layout_width="185dp"
             android:layout_height="35dp"
             android:layout_marginTop="15dp"
@@ -156,7 +156,7 @@
             app:layout_constraintVertical_bias="0.012" />
 
         <EditText
-            android:id="@+id/name_drug_input"
+            android:id="@+id/name"
             android:layout_width="185dp"
             android:layout_height="35dp"
             android:background="@drawable/custom_text_bg2"
@@ -176,7 +176,7 @@
             app:layout_constraintVertical_bias="0.055" />
 
         <EditText
-            android:id="@+id/number_doctor_drags"
+            android:id="@+id/use_count"
             android:layout_width="185dp"
             android:layout_height="35dp"
             android:background="@drawable/custom_text_bg2"
@@ -196,7 +196,7 @@
             app:layout_constraintVertical_bias="0.11" />
 
         <EditText
-            android:id="@+id/email_doctor"
+            android:id="@+id/use_time"
             android:layout_width="185dp"
             android:layout_height="35dp"
             android:background="@drawable/custom_text_bg2"
@@ -217,7 +217,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <Button
-        android:id="@+id/save_doctor"
+        android:id="@+id/save_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/custom_button"
