--- a/app/src/main/res/layout/more_fragment.xml
+++ b/app/src/main/res/layout/more_fragment.xml
@@ -317,7 +317,7 @@
             app:layout_constraintVertical_bias="0.7">
 
             <ImageView
-                android:id="@+id/add_drags_btn"
+                android:id="@+id/add_btn"
                 android:layout_width="55dp"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
