--- a/app/src/main/res/layout/my_doctor_fragment.xml
+++ b/app/src/main/res/layout/my_doctor_fragment.xml
@@ -49,7 +49,7 @@
         app:layout_constraintVertical_bias="0.19">
 
         <ImageView
-            android:id="@+id/add_drags_btn"
+            android:id="@+id/add_btn"
             android:layout_width="55dp"
             android:layout_height="match_parent"
             android:layout_gravity="center"
