--- a/app/src/main/res/layout/my_food_fragment.xml
+++ b/app/src/main/res/layout/my_food_fragment.xml
@@ -49,7 +49,7 @@
         app:layout_constraintVertical_bias="0.229">
 
         <ImageView
-            android:id="@+id/add_drags_btn"
+            android:id="@+id/add_btn"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_gravity="center"
