--- a/app/src/main/res/layout/cardview_notifactions.xml
+++ b/app/src/main/res/layout/cardview_notifactions.xml
@@ -120,7 +120,7 @@
             app:layout_constraintVertical_bias="0.175" />
 
         <ImageView
-            android:id="@+id/imageView8"
+            android:id="@+id/more_food_btn"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:background="@drawable/custom_add_bg"
@@ -285,7 +285,7 @@
             app:layout_constraintVertical_bias="0.175" />
 
         <ImageView
-            android:id="@+id/imageView10"
+            android:id="@+id/more_sport_btn"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:background="@drawable/custom_add_bg"
