--- a/app/src/main/res/layout/profie_fragment.xml
+++ b/app/src/main/res/layout/profie_fragment.xml
@@ -77,7 +77,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/droid_arabic_kufi"
-        android:text="تاريخ الميلاد"
+        android:text="العمر"
         android:textColor="#333399"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -178,7 +178,7 @@
         app:layout_constraintVertical_bias="0.01999998" />
 
     <EditText
-        android:id="@+id/textView24"
+        android:id="@+id/first_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="100dp"
@@ -222,11 +222,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView24"
+        app:layout_constraintTop_toBottomOf="@+id/first_name"
         app:layout_constraintVertical_bias="0.06999999" />
 
     <EditText
-        android:id="@+id/textView26"
+        android:id="@+id/age"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="210dp"
@@ -267,7 +267,7 @@
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/textView26"
+        app:layout_constraintEnd_toStartOf="@+id/age"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView19"
